force-app/main/default/objects/JBCXM__RelationshipSponsorTrackingHistory__c/JBCXM__RelationshipSponsorTrackingHistory__c.object-meta.xml
<CustomObject>
    <label>RelationshipSponsorTrackingHistory</label>
    <nameField>
        <label>RelationshipSponsorTrackingHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RelationshipSponsorTrackingHistory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>