force-app/main/default/objects/JBCXM__RelationshipSponsorTrackingHistory__c/fields/JBCXM__Contact__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RelationshipSponsorTrackingHistory</relationshipLabel>
    <relationshipName>RelationshipSponsorTrackingHistory</relationshipName>
    <type>Lookup</type>
</CustomField>