force-app/main/default/objects/JBCXM__RelationshipSponsorTrackingHistory__c/fields/JBCXM__ContactValue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ContactValue__c</fullName>
    <label>ContactValue</label>
    <type>TextArea</type>
</CustomField>