force-app/main/default/objects/JBCXM__RelationshipSponsorTrackingHistory__c/fields/JBCXM__NewValue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NewValue__c</fullName>
    <label>NewValue</label>
    <type>TextArea</type>
</CustomField>