force-app/main/default/objects/JBCXM__RelationshipSponsorTrackingHistory__c/fields/JBCXM__PreviousValue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PreviousValue__c</fullName>
    <label>PreviousValue</label>
    <type>TextArea</type>
</CustomField>