force-app/main/default/objects/JBCXM__RelationshipSponsorTrackingHistory__c/fields/JBCXM__RelationshipContact__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RelationshipContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelationshipContact</label>
    <referenceTo>JBCXM__GSRelationshipContacts__c</referenceTo>
    <relationshipLabel>RelationshipSponsorTrackingHistory</relationshipLabel>
    <relationshipName>RelationshipSponsorTrackingHistory</relationshipName>
    <type>Lookup</type>
</CustomField>